# QtROTest

./: .gitignore  .qmlformat.ini  CMakeLists.txt  Main.qml  cas_qml_ui.rep  find_local_qtremoteobjects.cmake  main.cpp
ui/: Backend.cpp  Backend.h  CMakeLists.txt  QMLTypeRegistration.h  RegistryModel.cpp  RegistryModel.h  VehicleService.cpp  VehicleService.h
